# knowledgebase-cli

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.agent/: agent.md  functional.md  log.md  rules.md  specification.md
.agent/plans/: plan-lambdapy-kb-migration.md  plan-rag-analyse-und-e2e-tests.md
.agent/plans/archived/: plan-phase3-and-tests.md  plan-rag-analyse-und-e2e-tests.md  plan-vision-image-support.md
knowledgebase/: __init__.py  cli.py  config.py  models.py
knowledgebase/core/: __init__.py  answer.py  chunk.py  extract.py  index.py  open_source.py  search.py  vision.py
tests/: conftest.py  test_answer.py  test_chunk.py  test_cli.py  test_e2e_add.py  test_e2e_pipeline.py  test_extract.py  test_extract_epub.py  test_index.py  test_open_source.py  test_search.py  test_vision_feature.py
